2001-08-28  Max Horn  <max@quendi.de>

	* Validation.pm: made sure that validate also works when the
	specified filename contains a path; upped limit for Description
	field to 45 chars, seems to be sufficient for "fink list"

	
2001-08-26  Max Horn  <max@quendi.de>

	* Validation.pm: New Module. Contains the code for validation of
	both .info and .deb files.
	* Engine.pm: moved validation code to new module.

2001-08-26  Max Horn  <max@quendi.de>

	* Engine.pm: added new command "validate" (alias "check") which
	validates a given package .info file or .deb file. Not finished.

2001-08-24  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (get_description): Added the Maintainer field to
	'fink describe' output.

	* Bootstrap.pm (bootstrap): Added code to install some
	non-essential, but important packages at bootstrap time. Currently
	installs apt.

2001-08-22  Christoph Pfisterer  <cp@chrisp.de>

	* PkgVersion.pm (phase_patch): Added support for
	UpdatePoMakefile. When set, copy the updated Makefile.in.in to the
	po subdirectory of the source tree.

2001-08-14  Christoph Pfisterer  <cp@chrisp.de>

	* SelfUpdate.pm: New module. Contains code to let Fink update
	itself from the Internet.
	* Engine.pm: Added self-update commands to the command list.
	* NetAccess.pm: New module. Encapsulates downloading files from
	the Internet (currently done via wget).
	* PkgVersion.pm (fetch_source): wget invocation code moved to the
	new NetAccess module.

2001-08-08  Christoph Pfisterer  <cp@chrisp.de>

	* Status.pm: New module. Parses the dpkg status file to find the
	installation status of packages.
	* PkgVersion.pm: Use Fink::Status to get the installed status of
	packages. Got rid of .../var/fink-stamp.

2001-08-06  Christoph Pfisterer  <cp@chrisp.de>

	* Services.pm (read_properties): Fixed regular expressions to
	really remove trailing whitespace.
	(read_properties_multival): Likewise.

	* Engine.pm (real_install): Added check to catch endless loops