@@ -1,10 +1,14 @@
+2001-08-29  Christoph Pfisterer  <cp@chrisp.de>
+
+	* PkgVersion.pm (phase_install): Added DocFiles field to ease
+	installation of README files.
+
 2001-08-28  Max Horn  <max@quendi.de>
 
 	* Validation.pm: made sure that validate also works when the
 	specified filename contains a path; upped limit for Description
 	field to 45 chars, seems to be sufficient for "fink list"
 
-	
 2001-08-26  Max Horn  <max@quendi.de>
 
 	* Validation.pm: New Module. Contains the code for validation of
